src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/NVAlphaToCoverageDitherControl_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/NVAlphaToCoverageDitherControl_StringErrorContext.class */
public final class NVAlphaToCoverageDitherControl_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glAlphaToCoverageDitherControlNV(I)V", "net/labymod/core/laby3d/opengl/error/generated/NVAlphaToCoverageDitherControlErrorContext");
        return methods;
    }
}
